tests/snapshots/test_runner__tests__compiler__typecheck__unused_variables_1.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
let foo = | x =>
  let y = x
  2

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/unused_variables_1.kk:2:7
  │
2 │   let y = x
  │       ^ Unused variable
  │
  = This variable is declared but not used anywhere, consider removing it.
